Use Integer.valueOf for memory improvement. PL-11094.